# Documentation-KB-Assistant

./: .gitignore  LICENSE  pyproject.toml
.streamlit/: config.toml
api/: main.py
chroma_db/: chroma.sqlite3
config/: config.yaml  settings.py
services/: chain.py  get_vectorstore.py  ingestion.py  llm.py  loader.py  logger.py  retriever.py
ui/: app.py
