[project]
name = "Documentation-KB-Assistant"
version = "1.1.2"
description = "retrieves most relevant from vectors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "chroma>=0.2.0",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
